--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -22,6 +22,7 @@ body {
     margin-right: 0.1em;
   }
   @include tablet { left: 120px; }
+  @include mobile { left: 80px; }
 }
 .con-wrapper {
   width: 100%; height: 100vh;
@@ -51,6 +52,7 @@ body {
     @include tablet { font-size: 0.9em; margin-left: 70px; }
     @include mobile {
       margin-left: 0;
+      font-size: 0.7em;
     }
   }
   .contact-container {
@@ -68,6 +70,7 @@ body {
           position: absolute; top: 53%; left: 54px;
           width: 48%; height: 17px; background-color: #4bf1f14f;
           @include tablet { width: 40%; left: 40px;}
+          @include mobile { width: 30%; left: 27px; height: 13px;}
         }
       }
     }
@@ -75,7 +78,8 @@ body {
     .cell-phone { margin-bottom: 3em; }
     @include tablet { font-size: 1.3em; left: 170px;}
     @include mobile {
-      left: 70px;
+      font-size: 0.9em;
+      left: 80px; top: 55%;
     }
   }
 }
