--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -100,8 +100,8 @@ body {
 
 @media screen and (max-width: 615px) {
   .con-wrapper .text-wrapper {
-    margin-left: 0;
-    font-size: 0.5em;
+    margin-left: 10px;
+    font-size: 0.6em;
   }
 }
 
