--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -51,8 +51,8 @@ body {
     }
     @include tablet { font-size: 0.9em; margin-left: 70px; }
     @include mobile {
-      margin-left: 0;
-      font-size: 0.5em;
+      margin-left: 10px;
+      font-size: 0.6em;
     }
   }
   .contact-container {
